phone book updated

--- a/first-app/lesson-8-text/lesson-8-text.csproj
+++ b/first-app/lesson-8-text/lesson-8-text.csproj
@@ -12,6 +12,9 @@
       <None Update="names.list">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Phone Book.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
